Landscape - Fix the width on mobile viewports it was not filling the full width of the component.

--- a/src/styles/components/shared/_announcements.scss
+++ b/src/styles/components/shared/_announcements.scss
@@ -30,7 +30,7 @@ $adsWidth: 300px;
   position: fixed;
   text-transform: uppercase;
   top: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 10;
   @include responsive-font(tiny);
   @include flex-center;
